--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -789,6 +789,9 @@
     <ClInclude Include="vendor\stb_image_write.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\pointLight.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="vendor\glm\detail\func_common.inl">
