--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(opengl_core)
+project(computerGraphicsProject)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -8,7 +8,7 @@ target_include_directories(Application PRIVATE Application/vendor/tinyobj Applic
 
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-target_link_options(Application PRIVATE PROFILE)
+    target_link_options(Application PRIVATE PROFILE)
     find_package(GLEW REQUIRED)
     target_link_libraries(Application PRIVATE GLEW::GLEW)
     find_package(glfw3 CONFIG REQUIRED)
@@ -16,7 +16,7 @@ target_link_options(Application PRIVATE PROFILE)
     message("Linked to windows using MSVC")
 else()
     if (CMAKE_SYSTEM_NAME STREQUAL Linux)          
-        target_link_libraries(Application PRIVATE GLEW glfw GL GLU)
+        target_link_libraries(Application PRIVATE GLEW glfw GL GLU pthread)
         message("Linked to Linux")
 
     elseif (CMAKE_SYSTEM_NAME STREQUAL Windows)       
