few optimization and used nodes for pointlights

--- a/Application/Application.vcxproj
+++ b/Application/Application.vcxproj
@@ -555,6 +555,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="application.cpp" />
+    <ClCompile Include="node.cpp" />
     <ClCompile Include="vendor\glm\detail\glm.cpp" />
     <ClCompile Include="vendor\tinyobj\tiny_obj_loader.cc" />
   </ItemGroup>
