--- a/Application/Application.vcxproj.filters
+++ b/Application/Application.vcxproj.filters
@@ -1213,5 +1213,8 @@
     <ClCompile Include="application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="node.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
